home page improvement

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <main>
@@ -17,17 +18,22 @@
                 <a class="active" href="index.html">Home</a>
               </div>
         </header>
-        <div class="name-and-picture">
-            <div class="Alicia-Image"></div>
-            <h1 class="myname">Alicia Silverio</h1>
-            <h3>Student and Software Developer</h3>
-        </div>
+        <section>
+            <div class="name-and-picture">
+                <img class="Alicia-Image" src="https://lh3.googleusercontent.com/NgZc-1k4H2j_IAs6rcAoyUsdbZKWYuKNhT4gw_Xh5vWDMnD1hFjdarzKlWsD9W3NxxUhAxyNndiFGjRQT-VeAx39evHfZY_lv_HqFiJ_ejEOHti4DvO2oqIOGemXRNHgAZRRjVmhuxiB8zwkhztr0h9hw-jdSrg50a7JzSBGtsA-EsP1soK-G2uUmYaFVCKOlVgrxONDAaEeutCZ7BGlepiAd9nA_bAUzZHdabzMuDrDQqXXF7ygAWOXbGz9B3YOAVMHszYYfD3X6dgKrP6anhllIWmJNz50qOnND1RLgHqTH25e-DjZ9DYqsrrozASrcZHiCyg3r2wcG2tTqxY1x3Bnj1oBl6VhauD7Df4NySqie6mFQZfh3m-9OctV7PhpslCR2LVS8hhrdGj33ED8aYEd85FihNiBTZgAWIM2PBNVVogdsVqIrEFYM4VlK2QPXOxCJ6MU-NU4btx8GZ4wbuHS7kX-ijDpjcpsQDTPlfmbdURmQcUNfC8-My59LQ0FkBkYmxDu1cJyBTXPrqk3sWC0C4MR2NoCaNIertFlgLewMniMCnAgMXWrSIZ78G4f8P1MGG5iMTN1_3B8EQtaZgKoKH9zePomYjt0chZA75DqAAkkph_Dv0P6g4bwP-AQbdMcNlrYmfaRKQUCapoFYgUWsEDueWAH1LjhE7a7Xj3Nb327WkENT00vlbuBrg_8qpoHy-BuMBQ19N75yGAOoapeKQ=w828-h893-no?authuser=0">
+                <h1 class="myname">Alicia Silverio</h1>
+                <h3>Student and Software Developer</h3>
+            </div>
+        </section>
     </main>
-
-
-
 <footer>
-
+    <div class="footer">
+        <a href="https://twitter.com/aliciasilverio_" target="_blank">Twitter</a>
+        <a href="https://www.linkedin.com/in/alicia-silverio-/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/aliciasilverio" target="_blank">GitHub</a>
+        <a href="mailto:aliciaalicia2455@gmail.com" target="_blank">Email</a>
+        <a href="https://www.instagram.com/aliciaxsilverio/" target="_blank">Instagram</a>
+    </div>
 </footer>
 <script src="app.js"></script>
 </body>
