--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
     <header class="my-header">
         <div class="top-navbar">
             <a class="active" href="projects.html">Projects</a>
@@ -16,6 +16,15 @@
             <a href="index.html">Home</a>
           </div>
     </header>
+    <footer>
+        <div class="footer">
+            <a href="https://twitter.com/aliciasilverio_" target="_blank">Twitter</a>
+            <a href="https://www.linkedin.com/in/alicia-silverio-/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/aliciasilverio" target="_blank">GitHub</a>
+            <a href="mailto:aliciaalicia2455@gmail.com" target="_blank">Email</a>
+            <a href="https://www.instagram.com/aliciaxsilverio/" target="_blank">Instagram</a>
+        </div>
+    </footer>
 <script src="app.js"></script>
 </body>
 </html>
