picture fixed, section added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.5.1.min.js"></script>
 </head>
-<body>
+<body> 
+
     <main>
         <header class="my-header">
             <div class="top-navbar">
@@ -20,12 +21,13 @@
         </header>
         <section>
             <div class="name-and-picture">
-                <img class="Alicia-Image" src="https://lh3.googleusercontent.com/NgZc-1k4H2j_IAs6rcAoyUsdbZKWYuKNhT4gw_Xh5vWDMnD1hFjdarzKlWsD9W3NxxUhAxyNndiFGjRQT-VeAx39evHfZY_lv_HqFiJ_ejEOHti4DvO2oqIOGemXRNHgAZRRjVmhuxiB8zwkhztr0h9hw-jdSrg50a7JzSBGtsA-EsP1soK-G2uUmYaFVCKOlVgrxONDAaEeutCZ7BGlepiAd9nA_bAUzZHdabzMuDrDQqXXF7ygAWOXbGz9B3YOAVMHszYYfD3X6dgKrP6anhllIWmJNz50qOnND1RLgHqTH25e-DjZ9DYqsrrozASrcZHiCyg3r2wcG2tTqxY1x3Bnj1oBl6VhauD7Df4NySqie6mFQZfh3m-9OctV7PhpslCR2LVS8hhrdGj33ED8aYEd85FihNiBTZgAWIM2PBNVVogdsVqIrEFYM4VlK2QPXOxCJ6MU-NU4btx8GZ4wbuHS7kX-ijDpjcpsQDTPlfmbdURmQcUNfC8-My59LQ0FkBkYmxDu1cJyBTXPrqk3sWC0C4MR2NoCaNIertFlgLewMniMCnAgMXWrSIZ78G4f8P1MGG5iMTN1_3B8EQtaZgKoKH9zePomYjt0chZA75DqAAkkph_Dv0P6g4bwP-AQbdMcNlrYmfaRKQUCapoFYgUWsEDueWAH1LjhE7a7Xj3Nb327WkENT00vlbuBrg_8qpoHy-BuMBQ19N75yGAOoapeKQ=w828-h893-no?authuser=0">
+                <img class="Alicia-Image" src="https://lh3.googleusercontent.com/j5pExJjwwHuMTolBaVPAQxjjCusgoHDMmHJBAvE8fd12hvvTtKB1g17VhtKckcIZ8rU1jAoB1J9XeZgaY6mo6UlU7e0Qzo5kVmxjFAz-pbfl4K3YncrCrvAJ3sGsBEPrEeZ_dZIVLe5jHzQStVcHeVSAzTn9HL39HSWyZn8PBDC9tVL0sMlmN9ZdegRhmO-jK12fOVwxg8KM_uTL3s4X6asfMaA9N1837FwTq5o_J2NSkgshioGeBDkko2ZlpKKEVXH_lWKLhWZdtpd9NsehVSZK2oD7NpETijMXYAIzbsRFZYBCfsC3NRqnzdqje7gKQubt1TjPJ33e1vrRl8gqYpIKxxTM6gmF-Tf1tfjebmFPN4533vgFioDqUmUeQ8cMEb8sRc1SfESUYfgYmyDjwvHMEHB6reob5pFrL-8SRlXsmkk8UcmO5fYVWyTFjvmbIPme0py70465seSnj2yjn_8MnP0HxtBfzIJBXSAIqkTw1yCt6uzhaaVaF_x1vzOiGJI_bJIYsOAHKkqpZM7jHk0BUVFVYcT0RcsA_c3HlhpOu_jqBXIhhvISW6pKdR6BSO9MWptm5kD4JgkSzIEKoiO7X6RGX7RHJkFEREAs-2Zo6E8RnANg3xZktUNF6bMWjyZsBpS0U8PnVfFzc9QYk5pbqhqpuvAho_PUkIekDG3aQHgnfxGU57ksF_4rCS8HzCbXpQNA89yrSegEFMyEKHRgfA=w197-h213-no?authuser=0">
                 <h1 class="myname">Alicia Silverio</h1>
                 <h3>Student and Software Developer</h3>
             </div>
         </section>
     </main>
+    <section class="below-main"></section>
 <footer>
     <div class="footer">
         <a href="https://twitter.com/aliciasilverio_" target="_blank">Twitter</a>
