--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <main>
         <header class="my-header">
-            <div class="top-navbar">
+            <div id="navbar">
                 <a href="projects.html">Projects</a>
                 <a href="bio.html">Bio</a>
                 <a href="resume.html">Resume</a>
@@ -25,7 +25,7 @@
             <div class="name-and-picture">
                 <img class="Alicia-Image" src="https://lh3.googleusercontent.com/j5pExJjwwHuMTolBaVPAQxjjCusgoHDMmHJBAvE8fd12hvvTtKB1g17VhtKckcIZ8rU1jAoB1J9XeZgaY6mo6UlU7e0Qzo5kVmxjFAz-pbfl4K3YncrCrvAJ3sGsBEPrEeZ_dZIVLe5jHzQStVcHeVSAzTn9HL39HSWyZn8PBDC9tVL0sMlmN9ZdegRhmO-jK12fOVwxg8KM_uTL3s4X6asfMaA9N1837FwTq5o_J2NSkgshioGeBDkko2ZlpKKEVXH_lWKLhWZdtpd9NsehVSZK2oD7NpETijMXYAIzbsRFZYBCfsC3NRqnzdqje7gKQubt1TjPJ33e1vrRl8gqYpIKxxTM6gmF-Tf1tfjebmFPN4533vgFioDqUmUeQ8cMEb8sRc1SfESUYfgYmyDjwvHMEHB6reob5pFrL-8SRlXsmkk8UcmO5fYVWyTFjvmbIPme0py70465seSnj2yjn_8MnP0HxtBfzIJBXSAIqkTw1yCt6uzhaaVaF_x1vzOiGJI_bJIYsOAHKkqpZM7jHk0BUVFVYcT0RcsA_c3HlhpOu_jqBXIhhvISW6pKdR6BSO9MWptm5kD4JgkSzIEKoiO7X6RGX7RHJkFEREAs-2Zo6E8RnANg3xZktUNF6bMWjyZsBpS0U8PnVfFzc9QYk5pbqhqpuvAho_PUkIekDG3aQHgnfxGU57ksF_4rCS8HzCbXpQNA89yrSegEFMyEKHRgfA=w197-h213-no?authuser=0">
                 <h1 class="myname">Alicia Silverio</h1>
-                <h3>Student and Software Developer</h3>
+                <h4>Software Engineer</h4>
             </div>
         </section>
     </main>
