--- a/resume.html
+++ b/resume.html
@@ -9,13 +9,20 @@
 </head>
 <body> 
     <header class="my-header">
-        <div class="top-navbar">
+        <div id="navbar">
             <a href="projects.html">Projects</a>
             <a href="bio.html">Bio</a>
             <a class="active" href="resume.html">Resume</a>
             <a href="index.html">Home</a>
           </div>
     </header>
+
+    <section>
+        <a href="Alicia_Silverio_resume.pdf" download>
+            <img class="resume-img" src="aliciasilverio-resume.png" alt="W3Schools">
+          </a>
+    </section>
+
     <footer>
         <div class="footer">
             <a href="https://twitter.com/aliciasilverio_" target="_blank">Twitter</a>
