--- a/projects.html
+++ b/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body> 
     <header class="my-header">
-        <div class="top-navbar">
+        <div id="navbar">
             <a class="active" href="projects.html">Projects</a>
             <a href="bio.html">Bio</a>
             <a href="resume.html">Resume</a>
