resume page done, arrows working

--- a/resume.html
+++ b/resume.html
@@ -17,8 +17,8 @@
           </div>
     </header>
 
-    <section>
-        <a href="Alicia_Silverio_resume.pdf" download>
+    <section class="resume-section">
+        <a class="resume-pdf" href="Alicia_Silverio_resume.pdf" download>
             <img class="resume-img" src="aliciasilverio-resume.png" alt="W3Schools">
           </a>
     </section>
