--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
   
   
     <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    
+    <div></div><a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
   
     <!-- Image text -->
@@ -97,8 +98,6 @@
       </div>
     </div>
 </section>
-
-<section class="divider2"></section>
     
 <footer>
     <div class="footer">
