--- a/projects.html
+++ b/projects.html
@@ -20,8 +20,8 @@
     </header>
         <section id="about-me">
             <h1>Welcome to my Project Page</h1>
-            <div class="popup" onclick="myFunction()"><img src="spaceillistration.jpeg" alt="">
-                <span class="popuptext" id="myPopup"><a class ="project-link"href="https://github.com/seir-rosies-riveters/space-battle-aliciasilverio">github link</a></span>
+            <div class="popup" onclick="myFunction()"><img class="space-illistration "src="spaceillistration.jpeg" width="50%" height="50%">
+                <span class="popuptext" id="myPopup"><a class ="project-link"href="https://github.com/seir-rosies-riveters/space-battle-aliciasilverio">Space Battle</a></span>
               </div>
         </section>
        
