better style for slideshow gallery

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <section class="divider">
         <div class="some-of-my-skills"><h1>Some of my Skills:</h1></div>
+        <p>(that i'll have when I complete GA)</p>
     </section>
     
     <!-- Container for the image gallery -->
@@ -98,7 +99,7 @@
       </div>
       <div class="column">
         <img class="demo cursor" src="https://reactjs.org/logo-og.png" style="width:100%" onclick="currentSlide(4)" alt="React">
-      </div>
+      </div> 
       <div class="column">
         <img class="demo cursor" src="https://www.vectorlogo.zone/logos/nodejs/nodejs-ar21.png" style="width:100%" onclick="currentSlide(5)" alt="Node.js">
       </div>
