adding icons to skills section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 <!-- Home -->
         <section>
             <div class="name-and-picture">
-                <img class="Alicia-Image" src="selfie1.jpeg">
                 <h1 class="myname">Alicia Silverio</h1>
                 <h4>Software Engineer</h4>
             </div>
@@ -33,18 +32,34 @@
 <!-- About Me Section -->
     <a name="about-me">
       <section id="about-me">
-        <h1>About Me</h1>
-        <p>I am an Atlanta-based Software Engineer. Excited to put my skills to use!</p>
-        <img class="coder-girl" src="codingaesthetic.jpeg" width="50%" height="50%">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <img class="Alicia-Image" src="selfie1.jpeg">
+            </div>
+            <div class="col">
+              <h4>I am an Full-Stack Software Engineer who strives to provide efficient and functional products. I am passionate about using technology to create unique and innovative experiences for users. My previous experience as an internet analyst has given me a methodical outlook on how to approach different challenges and the patience to find effective solutions.</h4>
+            </div>
+          </div>
+        </div>
       </section>
     </a>
     <section id="skills">
-        <div class="some-of-my-skills"><h1>Some of my Skills:</h1>
-
+        <h1 id="center">Some of my Skills:</h1>
 <!-- Container for the image gallery -->
-          <div class="">
+          <div class="container">
+            <div class="row row-cols-3">
+              <div class="col"><img src="/icons/git_icon.png" alt="GitHub Icon"></div>
+              <div class="col"><img src="/icons/html_icon.png" alt="HTML 5 Icon"></div>
+              <div class="col"><img src="/icons/javascript_icon.png" alt="Javascript Icon"></div>
+              <div class="col"><img src="/icons/jquery_icon.png" alt="jQuery Icon"></div>
+              <div class="col"><img src="/icons/mongodb_icon.png" alt="Mongodb Icon"></div>
+              <div class="col"><img src="/icons/node_icon.png" alt="Node Icon"></div>
+            </div>
+            <div class="row row-cols-1">
+              <div class="col"><img src="/icons/python_icon.png" alt="Python Icon"></div>
+            </div>
           </div>
-        </div>
     </section>
 
 <!-- Projects Section -->
@@ -60,24 +75,25 @@
             First Section
           </div>
         </div>
-
-        <div class="row justify-content-middle">
-          <div class="col-4">
-            Second Section
-          </div>
-          <div class="col-4">
-            Second Section
-          </div>
-        </div>
-
         <div class="row justify-content-end">
           <div class="col-4">
+            Second Section
+          </div>
+          <div class="col-4">
+            Second Section
+          </div>
+        </div>
+
+        <div class="row justify-content-start">
+          <div class="col-4">
             Last Section
           </div>
           <div class="col-4">
             Last Section
           </div>
         </div>
+
+
         </div>
       </div>
     </div>
