About Me adjusted

--- a/index.html
+++ b/index.html
@@ -11,27 +11,28 @@
 </head>
 <body> 
 
-    <main>
         <header class="my-header">
             <div id="navbar">
-                <a href="resume.html">Contact</a>
-                <a href="projects.html">Projects</a>
+                <a href="#contact">Contact</a>
+                <a href="#project">Projects</a>
                 <a href="#about-me">Bio</a>
-                <a href="index.html">Home</a>
+                <a href="#index">Home</a>
               </div>
         </header>
 <!-- Home -->
-        <section>
-            <div class="name-and-picture">
-                <h1 class="myname">Alicia Silverio</h1>
-                <h4>Software Engineer</h4>
-            </div>
-        </section>
-    </main>
+        <a name="index">
+             <div class="name-and-picture">
+                  <h1 class="myname">Alicia Silverio</h1>
+                  <h4>Software Engineer</h4>
+              </div>
+          </main>
+        </a>
+
 
 <!-- About Me Section -->
-    <a name="about-me">
-      <section id="about-me">
+  <a name="about-me">
+    <section id="about-me"> 
+    <h2> - About Me - </h2>
         <div class="container">
           <div class="row">
             <div class="col">
