--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone+Bounce&family=Pinyon+Script&family=Poiret+One&family=Teko&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <script src="jquery-3.5.1.min.js"></script>
@@ -22,8 +25,18 @@
 <!-- Home -->
         <a name="index">
              <div class="name-and-picture">
-                  <h1 class="myname">Alicia Silverio</h1>
-                  <h4>Software Engineer</h4>
+               <h4 style="padding-bottom: 40px;">Hello. I'm</h4>
+                  <h1 class="myname">
+                    <div class="wavy">
+                      <span style="--i:1">A</span>
+                      <span style="--i:2">L</span>
+                      <span style="--i:3">I</span>
+                      <span style="--i:4">C</span>
+                      <span style="--i:5">I</span>
+                      <span style="--i:6">A</span>
+                     </div>
+                  </h1>
+                  <h4>A Software Engineer</h4>
               </div>
           </main>
         </a>
@@ -46,19 +59,19 @@
       </section>
     </a>
     <section id="skills">
-        <h1 id="center">Some of my Skills:</h1>
+        <h1>Some of my Skills:</h1>
 <!-- Container for the image gallery -->
           <div class="container">
             <div class="row row-cols-3">
-              <div class="col"><img src="/icons/git_icon.png" alt="GitHub Icon"></div>
-              <div class="col"><img src="/icons/html_icon.png" alt="HTML 5 Icon"></div>
-              <div class="col"><img src="/icons/javascript_icon.png" alt="Javascript Icon"></div>
-              <div class="col"><img src="/icons/jquery_icon.png" alt="jQuery Icon"></div>
-              <div class="col"><img src="/icons/mongodb_icon.png" alt="Mongodb Icon"></div>
-              <div class="col"><img src="/icons/node_icon.png" alt="Node Icon"></div>
+              <div class="col"><img src="./icons/git_icon.png" alt="GitHub Icon"></div>
+              <div class="col"><img src="./icons/html_icon.png" alt="HTML 5 Icon"></div>
+              <div class="col"><img src="./icons/javascript_icon.png" alt="Javascript Icon"></div>
+              <div class="col"><img src="./icons/jquery_icon.png" alt="jQuery Icon"></div>
+              <div class="col"><img src="./icons/mongodb_icon.png" alt="Mongodb Icon"></div>
+              <div class="col"><img src="./icons/nodejs_icon.png" alt="Node Icon"></div>
             </div>
             <div class="row row-cols-1">
-              <div class="col"><img src="/icons/python_icon.png" alt="Python Icon"></div>
+              <div class="col"><img src="./icons/python_icon.png" alt="Python Icon"></div>
             </div>
           </div>
     </section>
