--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 <body> 
 
+
         <header class="my-header">
             <div id="navbar">
                 <a href="#contact">Contact</a>
@@ -108,6 +109,32 @@
 
 
         </div>
+      </div>
+    </div>
+  </section>
+</a>
+
+<a name="#contact">
+  <section id="contact">
+    <div class="content">
+      <h1 class="contact-title">Contact Me</h1>
+      <div class="contact-content">
+        <form action="http://henriquecarvalho.me" method="post" id="register">
+          <div class="name">
+            <input class="boxShadow" type="text" name="name" id="name" placeholder="Name *" required="">
+          </div>
+          <div class="subject">
+            <input class="boxShadow" type="text" name="subject" id="subject" placeholder="Subject *" required="">
+          </div>
+          <div class="email">
+            <input class="boxShadow" type="email" name="email" id="email" placeholder="Email *" required="">
+          </div>
+          <div class="message">
+            <textarea class="boxShadow" id="message" name="message" placeholder="Message *" required=""></textarea>
+            <label id="counter"></label>
+          </div>
+          <input type="submit" value="Submit" class="submit">
+        </form>
       </div>
     </div>
   </section>
