--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         <div class="text">
           <h3>Videoify</h4>
           <p>Short Description</p>
-        </div>
-        <div class="button" type="button" onclick="window.location.href='https://video-ify.herokuapp.com/';">Learn More</div>
+          </div>
+        <div class="button" type="button" onclick="window.location.href='https://video-ify.herokuapp.com/';">View Site</div>
       </div>
 
       <div class="item" id="2">
@@ -141,18 +141,18 @@
     <div class="content">
       <h1 class="contact-title">Contact Me</h1>
       <div class="contact-content">
-        <form action="http://henriquecarvalho.me" method="post" id="register">
+        <form method="post" id="register" action="mailto:aliciaalicia2455@gmail.com?subject=Regarding Portfolio" enctype="text/plain">
           <div class="name">
-            <input class="boxShadow" type="text" name="name" id="name" placeholder="Name *" required="">
+            <input class="boxShadow" type="text" name="name" id="name" placeholder="Name" required="">
           </div>
           <div class="subject">
-            <input class="boxShadow" type="text" name="subject" id="subject" placeholder="Subject *" required="">
+            <input class="boxShadow" type="text" name="subject" id="subject" placeholder="Subject" required="">
           </div>
           <div class="email">
-            <input class="boxShadow" type="email" name="email" id="email" placeholder="Email *" required="">
+            <input class="boxShadow" type="email" name="email" id="email" placeholder="Email" required="">
           </div>
           <div class="message">
-            <textarea class="boxShadow" id="message" name="message" placeholder="Message *" required=""></textarea>
+            <textarea class="boxShadow" id="message" name="message" placeholder="Message" required=""></textarea>
             <label id="counter"></label>
           </div>
           <input type="submit" value="Submit" class="submit">
