--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <div id="navbar">
                 <a href="#contact">Contact</a>
                 <a href="#projects">Projects</a>
+                <a href="#skills">Skills</a>
                 <a href="#about-me">Bio</a>
                 <a href="#index">Home</a>
               </div>
@@ -85,7 +86,7 @@
         <img class="img-project" src="./images/videoify.png" alt="" style="object-fit:cover;">
         <div class="text">
           <h3>Videoify</h4>
-          <p>Short Description</p>
+            <p>Short Description</p>
           </div>
         <div class="button" type="button" onclick="window.location.href='https://video-ify.herokuapp.com/';">View Site</div>
       </div>
@@ -94,7 +95,7 @@
         <img class="img-project"src="https://images.unsplash.com/photo-1496492352121-593138d42a61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3542849cc0459345e3aa82a90ae51a01&auto=format&fit=crop&w=1350&q=80" alt="">
         <div class="text">
           <h3>PROJECT 2</h4>
-          <p>Short Description</p>
+            <p>Short Description</p>
         </div>
         <div class="button">Learn More</div>
       </div>
@@ -155,7 +156,7 @@
             <textarea class="boxShadow" id="message" name="message" placeholder="Message" required=""></textarea>
             <label id="counter"></label>
           </div>
-          <input type="submit" value="Submit" class="submit">
+          <input type="submit"  value="Submit" class="submit">
         </form>
       </div>
     </div>
@@ -174,5 +175,8 @@
     </div>
 </footer>
 <script src="app.js"></script>
+
+<!-- Loader -->
+<div class="p"></div>
 </body>
 </html>
