personal mvp site

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </a>
     <!-- Skills -->
     <section id="skills">
-        <h2 cla;ss="fancy-title"> - Skills - </h2>
+        <h2 class="fancy-title"> - Skills - </h2>
 <!-- Container for the image gallery -->
 
 <div class="container">
@@ -72,43 +72,43 @@
                 <div class="item">
                     <div class="img_wrap">
                         <img class="img_img"src="./icons/git_icon.png" alt="GitHub Icon">
-                    <p class="img_description">This is example text</p>
+                    <p class="img_description">Github</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="img_wrap">
                       <img class="img_img"src="./icons/html_icon.png" alt="HTML 5 Icon">
-                    <p class="img_description">This is example text</p>
+                    <p class="img_description">HTML 5</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="img_wrap">
                       <img class="img_img"src="./icons/javascript_icon.png" alt="Javascript Icon">
-                    <p class="img_description">This is example text</p>
+                    <p class="img_description">Javascript</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="img_wrap">
                       <img class="img_img"src="./icons/jquery_icon.png" alt="jQuery Icon">
-                    <p class="img_description">This is example text</p>
+                    <p class="img_description">jQuery</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="img_wrap">
                       <img class="img_img"src="./icons/mongodb_icon.png" alt="Mongodb Icon">
-                    <p class="img_description">This is example text</p>
+                    <p class="img_description">Mongodb</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="img_wrap">
                       <img class="img_img"src="./icons/nodejs_icon.png" alt="Node Icon">
-                    <p class="img_description">This is example text</p>
+                    <p class="img_description">Node</p>
                     </div>
                 </div>
                 <div class="item">
                     <div class="img_wrap">
                       <img class="img_img"src="./icons/python_icon.png" alt="Python Icon">
-                      <p class="img_description">This is example text</p>
+                      <p class="img_description">Python</p>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
           <h3>Videoify</h4>
             <p>Short Description</p>
           </div>
-        <div class="button" type="button" onclick="window.location.href='https://video-ify.herokuapp.com/';">View Site</div>
+        <div class="button" target="_blank" type="button" onclick="window.location.href='https://video-ify.herokuapp.com/'; ">View Site</div>
       </div>
 
       <div class="item" id="2">
@@ -216,8 +216,6 @@
         <a href="https://twitter.com/aliciasilverio_" target="_blank">Twitter</a>
         <a href="https://www.linkedin.com/in/alicia-silverio-/" target="_blank">LinkedIn</a>
         <a href="https://github.com/aliciasilverio" target="_blank">GitHub</a>
-        <a href="mailto:aliciaalicia2455@gmail.com" target="_blank">Email</a>
-        <a href="https://www.instagram.com/aliciaxsilverio/" target="_blank">Instagram</a>
     </div>
 </footer>
 <script src="app.js"></script>
