big changes, fixing project section

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <h2 class="fancy-title"> - Skills - </h2>
 <!-- Container for the image gallery -->
 
-<div class="container">
-	<div class="row">
+<div>
+	<div>
 		<div class="MultiCarousel"  data-items="1,2,3,4" data-slide="3" id="MultiCarousel"  data-interval="3000">
             <div class="MultiCarousel-inner">
                 <div class="item">
@@ -114,7 +114,7 @@
             </div>
         </div>
 	</div>
-	<div class="row">
+	<div>
 	    <div class="col-md-12 text-center">
 	        <br/><br/><br/>
 	        <hr/>
@@ -125,60 +125,38 @@
 
 <!-- Projects Section -->
 <a name="projects">
-  <section style="background-color: #E3FDFD;">
-    <h1 style="padding-top: 7%;" class="fancy-title"> - Projects - </h1>
-    <div class="container">
-      <div class="item" id="1">
-        <img class="img-project" src="./images/videoify.png" alt="" style="object-fit:cover;">
-        <div class="text">
-          <h3>Videoify</h4>
-            <p>Short Description</p>
+  <div class="container">
+    <div class="row row-cols-2">
+      <div class="col">
+        <img class="img-project" src="./images/videoify.png" alt="">
+          <div class="project-buttons">
+            <a href="https://video-ify.herokuapp.com/" class="btn btn-outline-dark" button type="button" target="_blank">Videoify</a>
+            <a href="https://github.com/aliciasilverio/Video-ify-front-end" class="btn btn-outline-dark" button type="button" target="_blank">Github</a>
           </div>
-        <div class="button" target="_blank" type="button" onclick="window.location.href='https://video-ify.herokuapp.com/'; ">View Site</div>
-      </div>
-
-      <div class="item" id="2">
-        <img class="img-project"src="https://images.unsplash.com/photo-1496492352121-593138d42a61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=3542849cc0459345e3aa82a90ae51a01&auto=format&fit=crop&w=1350&q=80" alt="">
-        <div class="text">
-          <h3>PROJECT 2</h4>
-            <p>Short Description</p>
         </div>
-        <div class="button">Learn More</div>
-      </div>
-
-      <div class="item" id="3">
-        <img class="img-project"src="https://images.unsplash.com/photo-1515215676803-119c88d493cf?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=baf00747bfb9fe41ad9af8cf00dbebbf&auto=format&fit=crop&w=1350&q=80" alt="">
-        <div class="text">
-            <h3>PROJECT 3</h4>
-          <p>Short Description</p>
+        <div class="col">
+          <img class="img-project" src="./images/videoify.png" alt="">
+            <div class="project-buttons">
+              <a href="https://video-ify.herokuapp.com/" class="btn btn-outline-dark" button type="button" target="_blank">Videoify</a>
+              <a href="https://github.com/aliciasilverio/Video-ify-front-end" class="btn btn-outline-dark" button type="button" target="_blank">Github</a>
+            </div>
           </div>
-          <div class="button">Learn More</div>
-      </div>
-
-      <div class="item" id="4">
-        <img class="img-project"src="https://images.unsplash.com/photo-1496939217462-7d42e9a74f0e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5e3be993a88feed38e4f5374ff3ba115&auto=format&fit=crop&w=1350&q=80g" alt="">
-        <div class="text">
-          <h3>PROJECT 4</h4>
-          <p>Short Description</p>
-        </div>
-        <div class="button">Learn More</div>
-      </div>
-  </div>
-
-  <!-- Modal -->
-  <div id="preview" class="modal">
-    <div class="modal-content">
-      <span class="close">&times;</span>
-      <img class="img-project"id="img" src="">
-      <div id="details">
-        <h3 id="title"></h3>
-        <p id="info">Some text</p>
-        <div class="button" id="live">View</div>
-          <i class="fab fa-github-square" id="github"></i>
-      </div>
+          <div class="col">
+            <img class="img-project" src="./images/videoify.png" alt="">
+              <div class="project-buttons">
+                <a href="https://video-ify.herokuapp.com/" class="btn btn-outline-dark" button type="button" target="_blank">Videoify</a>
+                <a href="https://github.com/aliciasilverio/Video-ify-front-end" class="btn btn-outline-dark" button type="button" target="_blank">Github</a>
+              </div>
+            </div>
+            <div class="col">
+              <img class="img-project" src="./images/videoify.png" alt="">
+                <div class="project-buttons">
+                  <a href="https://video-ify.herokuapp.com/" class="btn btn-outline-dark" button type="button" target="_blank">Videoify</a>
+                  <a href="https://github.com/aliciasilverio/Video-ify-front-end" class="btn btn-outline-dark" button type="button" target="_blank">Github</a>
+                </div>
+              </div>
     </div>
   </div>
-</section>
 </a>
 
 <!-- Contact Me Section -->
